--- a/plot.ipynb
+++ b/plot.ipynb
@@ -60,7 +60,7 @@
     "    \"\"\"Plot simple regret, cumulative regret, and Cumulative inference time.\n",
     "    \n",
     "    Args: \n",
-    "        results: dictionary of models' results. For a model m, results[m] is a dictionary: \n",
+    "        results: dictionary of models' results. For a model m, results[m] is also a dictionary: \n",
     "            - simple_regret, (num_seed, num_dataset, H): simple regret along trajectories.\n",
     "            - cumulative_regret, (num_seed, num_dataset, H): cumulative regret along trajectories.\n",
     "            - inference_time, (num_seed, num_dataset, H): cumulative inference_time along trajectories.\n",
